# PROJECT_Birdidex

./: .dockerignore  .env.example  .gitignore  .project_manifest.json  AGENT.example.md  Dockerfile  Makefile  README.md  README_PRIVATE.example.md  SEQ_BirdDex_Model_Training_Skeleton.ipynb  SEQ_BirdDex_Task_Sheet.tex  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
apps/bird_roi_scan/: README.md  pyproject.toml
apps/bird_roi_scan/src/bird_roi_scan/: __init__.py  cli.py  occurrences.py  pipeline.py  scoring.py  seeds.py
apps/bird_roi_scan/src/bird_roi_scan/providers/: __init__.py  ala.py  ebird.py  gbif.py  inaturalist.py  web_search.py
apps/cyberdeck_ui/: README.md  pyproject.toml
apps/cyberdeck_ui/src/bird_ui/: data_access.py  server.py
apps/cyberdeck_ui/src/bird_ui/templates/: index.html  observations.html  species.html
apps/inference/: README.md  pyproject.toml
apps/inference/src/bird_inference/: __init__.py  app.py  camera.py  classifier.py  cropper.py  detector.py  logging_sink.py  pipeline.py  reranker.py  schema.py  species_db.py
apps/scanner/: README.md  pyproject.toml
apps/scanner/src/bird_scanner/: __init__.py  cli.py  pipeline.py
apps/scanner/src/bird_scanner/providers/: base.py  ebird.py  gbif.py
apps/tools/: README.md
apps/training/: README.md  pyproject.toml
apps/training/src/bird_training/: __init__.py  dataset.py  evaluate.py  export_onnx.py  train_classifier.py  train_detector.py
audit_backups/restructure_20260613_145441/bird-roi-scan-src/bird_roi_scan/: cli.py
audit_backups/restructure_20260613_145441/bird-roi-scan-src/main/: cli.py
audit_backups/restructure_20260613_145441/bird-roi-scan-src/models/: evidence.py  occurrence.py  species.py
audit_backups/restructure_20260613_145441/bird-roi-scan-src/providers/: base.py
audit_backups/restructure_20260613_145441/bird-roi-scan-src/reports/: species_report.py
audit_backups/restructure_20260613_145441/bird-roi-scan-src/utils/: hashing.py  retry.py
audit_backups/restructure_20260613_145441/configs/: providers.yaml  roi.yaml  scoring.yaml
audit_backups/restructure_20260613_145441/meta/: README.md
audit_backups/restructure_20260613_145441/scripts/: 01_seed_species.py  02_pull_structured_occuences.py  05_export_review_tables.py
audit_backups/restructure_20260613_145441/tests/: test_evidence_score.py  test_keyword_builder.py  test_roi_filter.py
audit_backups/restructure_20260613_145441/tests/fixtures/: sample_search_hits.json
bird-roi-scan/: pyproject.toml
bird-roi-scan/notebooks/: 02_occurrence_sanity_check.ipynb  03_species_score_review.ipynb
bird-roi-scan/scripts/: 00_build_roi.py  03_run_keyword_scan.py  04_score_species.py
bird-roi-scan/src/main/: cli.py
bird-roi-scan/src/models/: evidence.py  occurrence.py  species.py
bird-roi-scan/src/providers/: web_search.py
bird-roi-scan/src/reports/: coverage_report.py
bird-roi-scan/src/storage/: manifest.py
bird-roi-scan/tests/: test_taxonomy_resolver.py
bird-roi-scan/tests/fixtures/: sample_occurrences.json  sample_roi.geojson
configs/: dataset_search.example.toml  providers.example.toml
configs/device/: cyberdeck.yaml
configs/inference/: runtime.yaml
configs/roi/: prototype_roi.geojson  prototype_roi.yaml  roi.example.geojson  roi.yaml
configs/scanner/: providers.example.yaml  providers.yaml  scoring.yaml  species_filters.yaml
configs/training/: augmentation.yaml  classifier.yaml  detector.yaml
data/seeds/: inat_observations.sample.json  master_seed.example.txt
data/taxonomy/: manual_overrides.example.toml
docs/: AGENT_README.md  ARCHITECTURE.md  AUDIT_STACK_SCAFFOLD.md  BIRDIDEX_final_task_sheet.md  BIRDIDEX_project_log.md  CONTAINER.md  ENVIRONMENT.md  RESTRUCTURE_AUDIT.md  WORK_CATEGORIES.md
docs/task_sheet/: SEQ_BirdDex_Task_Sheet.md  SEQ_BirdDex_Task_Sheet.tex  SEQ_BirdDex_Task_Sheet.toc
docs/task_sheet/categories/: 01_ml_recognition_pipeline.md  02_dataset_acquisition_roi.md  03_offline_app_ui.md  04_os_system_image.md  05_firmware.md  06_camera_sensor_integration.md  07_deployment_testing_field.md  08_shared_contracts_docs.md  README.md
firmware/: README.md
notebooks/dataset_review/: SEQ_BirdiDex_Dataset_qualitative_review.ipynb
notebooks/scanner/: 01_roi_visual_check.ipynb  02_occurrence_sanity_check.ipynb  03_species_score_review.ipynb
notebooks/training/: SEQ_BirdDex_Machine_Learning.ipynb
os/: README.md
scripts/: check_notebook_static.py
scripts/dataset/: 00_build_roi.py  01_seed_species.py  02_pull_structured_occurrences.py  03_run_keyword_scan.py  04_score_species.py  05_export_review_tables.py  06_build_image_manifest.py  07_build_splits.py  build_species_dataset.py
scripts/env/: doctor.py
scripts/inference/: run_demo_inference.py
scripts/setup/: verify_stack.py
src/birdidex/: __init__.py  audit.py  bigbird.py  cli.py  dataset_review.py  db.py  download.py  images.py  infer.py  observations.py  paths.py  pipeline.py  profiles.py  providers.py  roi.py  secrets.py  seed.py  settings.py  splits.py  taxonomy.py  taxonomy_expand.py  taxonomy_sources.py  train.py
src/birdidex/ui/: __init__.py  server.py
tests/: conftest.py
tests/fixtures/: make_tiny_bigbird.py  sample_occurrences.json  sample_roi.geojson  sample_search_hits.json
tests/fixtures/providers/: ala_autocomplete.json  ala_occurrences.json  ebird_recent.json  ebird_taxonomy_search.json  gbif_occurrences.json  inat_occurrences.json  inat_taxa.json
tests/live/: test_live_api.py
tests/unit/: test_bigbird.py  test_candidate_pipeline.py  test_confidence_gate.py  test_config.py  test_download.py  test_ebird.py  test_images.py  test_imports.py  test_inference.py  test_labels_metrics.py  test_manifest.py  test_notebook_static.py  test_observation_log.py  test_pipeline.py  test_profiles_observations_audit.py  test_provider_parsers.py  test_provider_protocol.py  test_providers.py  test_region_presence.py  test_roi.py  test_scoring.py  test_secrets_seed.py  test_species_classes.py  test_splits.py  test_taxonomy.py  test_taxonomy_expand.py  test_training_boundary.py  test_ui.py
