[project]
name = "birdidex"
version = "0.1.0"
description = "Bird Pokedex cyberdeck — SEQ offline bird scanner and classifier"
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "tenacity>=8",
    "orjson>=3",
    "python-dotenv>=1",
    "pyyaml>=6",
    "numpy>=1.26",
    "pandas>=2",
    # Internal workspace members — installed editable so `uv run` resolves them.
    "bird-core",
    "bird-geo",
    "bird-data",
    "bird-ml",
    "bird-device",
    "bird-roi-scan",
    "bird-training",
    "bird-inference",
    "bird-ui",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pyright>=1.1",
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "pre-commit>=3",
    "mypy>=2.1.0",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "notebook>=7.6.0",
    "ipywidgets>=8.1.8",
]
scanner = [
    "polars>=1",
    "pyarrow>=16",
    "duckdb>=1",
    "geopandas>=1",
    "shapely>=2",
    "pyproj>=3",
    "rapidfuzz>=3",
    "beautifulsoup4>=4",
    "trafilatura>=1",
    "pyyaml>=6",
    "lxml>=5",
    "requests>=2",
]
vision = [
    "opencv-python-headless>=4",
    "pillow>=10",
    "imageio>=2",
    "rawpy>=0.23",
    "imagehash>=4",
    "albumentations>=1",
    "scikit-image>=0.22",
    # fiftyone has complex native deps — install manually if needed
    "machinevision-toolbox-python>=2.0.1",
    "spatialmath-python>=1.1.16",
    "kornia>=0.8.3",
    "supervision>=0.29.1",
    "pycocotools>=2.0.11",
]
training = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
    "pytorch-triton-rocm==3.5.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "timm>=1",
    "torchmetrics>=1",
    "lightning>=2",
    "mlflow>=2",
    "tensorboard>=2",
    "scikit-learn>=1",
    "matplotlib>=3",
]
inference = [
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "openvino>=2026.2.1",
    "psutil>=6",
    "numpy>=1.26",
    "opencv-python-headless>=4",
    "pillow>=10",
]
ui = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3",
    "python-multipart>=0.0.9",
]
tensorflow = [
    "keras>=3.15.0",
    "tensorflow>=2.21.0",
]
exporter = [
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
    "openvino>=2026.2.1",
]

[tool.uv]
package = false
# Enforce the repo-wide OpenCV policy. Some vision tools declare the GUI wheel
# transitively, but cv2 is provided by opencv-python-headless in the relevant groups.
exclude-dependencies = ["opencv-python"]

[[tool.uv.index]]
name = "pytorch-rocm64"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.uv.sources]
bird-core = { workspace = true }
bird-geo = { workspace = true }
bird-data = { workspace = true }
bird-ml = { workspace = true }
bird-device = { workspace = true }
bird-roi-scan = { workspace = true }
bird-training = { workspace = true }
bird-inference = { workspace = true }
bird-ui = { workspace = true }
# AMD ROCm Linux training machines use the PyTorch ROCm wheels. PyTorch still
# reports GPU access through torch.cuda APIs on ROCm. Raspberry Pi deployment
# should sync inference/ui groups instead of the full training stack.
torch = [
    { index = "pytorch-rocm64", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-rocm64", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchaudio = [
    { index = "pytorch-rocm64", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm64", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[tool.uv.workspace]
members = [
    "packages/bird_core",
    "packages/bird_geo",
    "packages/bird_data",
    "packages/bird_ml",
    "packages/bird_device",
    "apps/bird_roi_scan",
    "apps/training",
    "apps/inference",
    "apps/cyberdeck_ui",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["audit_backups", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "B", "SIM"]
# ANN401: the vision/inference/provider layers pass through numpy frames, crops, and
# heterogeneous provider JSON, which are legitimately typed as Any (matches the existing
# skeleton, e.g. bird_ml.transforms / bird_geo.geometry / bird_device.camera_base).
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"scripts/**" = ["ANN", "T201"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "audit_backups/",
    ".venv/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = []
