[project]
name = "birdidex"
version = "0.1.0"
description = "Local BIRDIDEX bird image dataset and model scaffold"
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "python-dotenv>=1",
    "pyyaml>=6",
]

[project.scripts]
birdidex = "birdidex.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pyright>=1.1",
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "pre-commit>=3",
    "mypy>=2.1.0",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "notebook>=7.6.0",
    "ipywidgets>=8.1.8",
]
scanner = [
    "duckdb>=1",
    "geopandas>=1",
    "shapely>=2",
    "pyproj>=3",
    "rapidfuzz>=3",
]
vision = [
    "opencv-python-headless>=4",
    "pillow>=10",
    "imageio>=2",
    "imagehash>=4",
    "albumentations>=1",
    "scikit-image>=0.22",
]
training = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
    "pytorch-triton-rocm==3.5.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "timm>=1",
    "torchmetrics>=1",
    "lightning>=2",
    "mlflow>=2",
    "tensorboard>=2",
    "scikit-learn>=1",
    "matplotlib>=3",
]
inference = [
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "openvino>=2026.2.1",
    "psutil>=6",
    "numpy>=1.26",
    "opencv-python-headless>=4",
    "pillow>=10",
]
ui = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3",
    "python-multipart>=0.0.9",
]

[tool.uv]
exclude-dependencies = ["opencv-python"]

[[tool.uv.index]]
name = "pytorch-rocm64"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm64", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-rocm64", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchaudio = [
    { index = "pytorch-rocm64", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm64", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/birdidex"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "B", "SIM"]
ignore = ["ANN401", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"scripts/**" = ["ANN", "T201"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
