[project]
dependencies = [
  "httpx",
  "pandas",
  "polars",
  "pyarrow",
  "duckdb",
  "geopandas",
  "shapely",
  "pydantic",
  "typer",
  "rich",
  "python-dotenv",
  "tenacity",
  "beautifulsoup4",
  "trafilatura",
  "rapidfuzz",
  "orjson",
  "pytest",
  "streamlit",
  "fastapi",
  "plotly",
  "postgis",
  "dvc",
]