[project]
name = "bird-roi-scan"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bird-core",
    "bird-geo",
    "bird-data",
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "tenacity>=8",
    "pyyaml>=6",
]

[tool.uv.sources]
bird-core = { workspace = true }
bird-geo = { workspace = true }
bird-data = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bird_roi_scan"]
