[project]
name = "bird-ui"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bird-core",
    "bird-data",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bird_ui"]
