[project]
name = "bird-inference"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bird-core",
    "bird-data",
    "bird-ml",
    "bird-device",
]

[tool.uv.sources]
bird-core = { workspace = true }
bird-data = { workspace = true }
bird-ml = { workspace = true }
bird-device = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bird_inference"]
